# social-recommendation-algorithms

./: .gitignore  README.md  example_deep_learning.py  example_usage.py  main.py  pyproject.toml
config/: config.yaml
experiments/: run_experiments.py
src/: __init__.py
src/dashboard/: __init__.py  app.py
src/data/: __init__.py  data_loader.py  prepocessor.py  preprocessor.py  splitter.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/models/: __init__.py  base_model.py
src/models/baseline/: __init__.py  global_mean.py  popularity.py
src/models/collaborative/: __init__.py  knn_item.py  knn_user.py  svd.py
src/models/content/: __init__.py  content_based.py
src/models/deep_learning/: __init__.py  ncf.py  two_tower.py
src/models/hybrid/: __init__.py  hybrid.py
src/utils/: __init__.py  config.py  logger.py  result_manager.py
